--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Colored Marker </title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>CSS color Marker</h1>
+    <div class="container">
+<div class="red"></div>
+<div class="green"></div>
+<div class="blue"></div>
+    </div>
 </body>
 </html>
