applying css element

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <body>
     <h1>CSS color Marker</h1>
     <div class="container">
-<div class="red"></div>
-<div class="green"></div>
-<div class="blue"></div>
+<div class="red marker"></div>
+
+<div class="green marker"></div>
+<div class="blue marker"></div>
     </div>
 </body>
 </html>
