--- a/index.html
+++ b/index.html
@@ -9,10 +9,19 @@
 <body>
     <h1>CSS color Marker</h1>
     <div class="container">
-<div class="red marker"></div>
+<div class="red marker">
+    <div class="cap"></div>
+    <div class="sleeve"></div>
+</div>
 
-<div class="green marker"></div>
-<div class="blue marker"></div>
+<div class="green marker">
+    <div class="cap"></div>
+    <div class="sleeve"></div>
+</div>
+<div class="blue marker">
+    <div class="cap"></div>
+    <div class="sleeve"></div>
+</div>
     </div>
 </body>
 </html>
